--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+         href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
+         rel="stylesheet"
+      />
+      <link
+         href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
+         rel="stylesheet"
+      />
+    <link
+         rel="stylesheet"
+         media="screen"
+         href="https://fontlibrary.org/face/hk-grotesk"
+         type="text/css"
+      />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
